# thmnzr

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  Taskfile.yml  go.mod  pyproject.toml
.github/workflows/: ci.yml
cmd/thmnzr/: main.go
docs/: AGENT_USAGE.md
internal/cli/: cli.go  cli_test.go
internal/input/: parser.go  parser_test.go
internal/phoenix/: client.go  client_test.go
internal/render/: markdown.go  markdown_test.go
internal/trace/: span.go  tree.go  tree_test.go
src/trace_humanizer/: cli.py  client.py  formatter.py  span_tree.py  url_parser.py
