[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trace-humanizer"
version = "0.1.0"
description = "Convert Phoenix traces to human-readable markdown"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.scripts]
trace-humanizer = "trace_humanizer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trace_humanizer"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]